--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "framer-motion": "^2.7.7",
     "massive": "^6.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
